dist/objects/Grant__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <description>created by Desa Markovic @Impact Box on 26/10/21</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <description>created by Desa Markovic @Impact Box on 26/10/21</description>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created by Desa Markovic @Impact Box on 27/10/21</description>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Grants</relationshipLabel>
        <relationshipName>Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Programme__c</fullName>
        <description>created by Desa Markovic @ImpactBox on 26/10/21</description>
        <label>Programme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employability Fund</fullName>
                </value>
                <value>
                    <fullName>Housing Fund</fullName>
                </value>
                <value>
                    <fullName>Future Builders</fullName>
                </value>
                <value>
                    <fullName>Health Fund</fullName>
                </value>
                <value>
                    <fullName>Bursary Fund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <description>Created by Desa Markovic @Impact Box on 26/10/21</description>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <label>Grant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Grant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>